<resources>
    <string name="app_name">Кременчуцьке відділення Полтавської ТПП</string>

    <string name="feedback">Відгук</string>
    <string name="website">Сайт</string>
    <string name="save">Зберегти</string>
    <string name="pref_edit">Загальні</string>
    <string name="wrong_pib">Некоректний П.І.Б</string>
    <string name="pref_pib_title">П.І.Б.</string>
    <string name="pib_example">Гурченко Віктор Генадійович</string>
    <string name="pref_pib_sum">Введіть ім\'я, що використовуватиметься при оплаті</string>
    <string name="pref_info">Про програму</string>
    <string name="users_pattern">Оплата за %s, від %s</string>

    <string name="feedback_subject">КВПТПП Android app report</string>
    <string name="feedback_mail_body">Шановний представнику Кременчуцького відділення Полтавської ТПП, </string>
    <string name="sum_to_pay">Сума до сплати</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="payment">Оплата</string>
    <string name="editing">Редагування</string>
    <string name="menu_services">Послуги</string>
    <string name="menu_request">Заявка</string>
    <string name="menu_about">Про нас</string>
    <string name="menu_feedback">Зворотній зв\'язок</string>
    <string name="communicate">Комунікації</string>
    <string name="menu_share">Поділитися</string>

    <string-array name="services_array">
        <item>Оцінка житлової нерухомості</item>
        <item>Оцінка земельних ділянок</item>
        <item>Послуги технічної інвентаризації</item>
        <item>Оцінка обладнання</item>
        <item>Оцінка транспортних засобів</item>
        <item>Незалежна експертиза та сертифікація</item>
        <item>Штрихове кодування</item>
        <item>Переклади з іноземних мов</item>
        <item>Виставкова та ярмаркова діяльність</item>
        <item>Презентації, конференції, семінари</item>
        <item>Конференц-зал</item>
        <item>Семінари у сфері здійснення державних закупівель</item>
        <item>Бюро технічної інвентаризації (БТІ)</item>
    </string-array>

    <string name="about_app">Кременчуцьке відділення представляє інтереси Полтавської Торгово-промислової палати
        в південному регіоні Полтавської області і пропонує дійсним членам, а також підприємствам регіону весь спектр інформаційних,
        консультаційних, експертних, рекламних та інших послуг. Підприємства, які скористалися послугами Кременчуцького відділення Полтавської ТПП,
        гідно оцінили рівень професіоналізму і наданого сервісу.
    </string>
    <string name="clipboard_saved">Збережено в буфер обміну</string>
    <string name="address">Адреса:</string>
    <string name="address_value">Україна, 39600, м. Кременчук вул. Генерала Жадова, 2</string>
    <string name="email">Електронна пошта:</string>
    <string name="contacts">Контакти:</string>
    <string name="url_contacts">http://www.krcci.pl.ua/contacts</string>
</resources>
