<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_request" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_about" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_web_black_24dp"
                android:title="@string/website" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
